[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/sardinella.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Logo.png" type="Texture" id=3]
[ext_resource path="res://MenuLogin.tscn" type="PackedScene" id=4]
[ext_resource path="res://MenuAwal.tscn" type="PackedScene" id=5]
[ext_resource path="res://MenuJenis.tscn" type="PackedScene" id=6]
[ext_resource path="res://MenuAbout.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menuskor.tscn" type="PackedScene" id=8]

[node name="NMenu" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 512.486, 300.403 )
scale = Vector2( 0.799812, 0.832213 )
texture = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="Sprite" index="0"]

position = Vector2( 357.679, -239.42 )
scale = Vector2( 0.689374, 0.689374 )
texture = ExtResource( 3 )

[node name="NMenuLogin" parent="." index="1" instance=ExtResource( 4 )]

[node name="NMenuAwal" parent="." index="2" instance=ExtResource( 5 )]

visible = false

[node name="NMenuJenis" parent="." index="3" instance=ExtResource( 6 )]

editor/display_folded = true
visible = false

[node name="NAbout" parent="." index="4" instance=ExtResource( 7 )]

editor/display_folded = true
visible = false

[node name="NSkor" parent="." index="5" instance=ExtResource( 8 )]

editor/display_folded = true
visible = false

[connection signal="pressed" from="NMenuLogin/BLogin" to="." method="_on_BLogin_pressed"]

[connection signal="pressed" from="NMenuLogin/BExit" to="." method="_on_BExit_pressed"]

[connection signal="pressed" from="NMenuLogin/BDaftar" to="." method="_on_BDaftar_pressed"]

[connection signal="pressed" from="NMenuLogin/PNamaSama/BOkNamaSama" to="." method="_on_BOkNamaSama_pressed"]

[connection signal="pressed" from="NMenuLogin/PPassSalah/BOkPassSalah" to="." method="_on_BOkPassSalah_pressed"]

[connection signal="pressed" from="NMenuAwal/BPlay" to="." method="_on_BPlay_pressed"]

[connection signal="pressed" from="NMenuAwal/BRanking" to="." method="_on_BRanking_pressed"]

[connection signal="pressed" from="NMenuAwal/BAbout" to="." method="_on_BAbout_pressed"]

[connection signal="pressed" from="NMenuAwal/BLogout" to="." method="_on_BLogout_pressed"]

[connection signal="pressed" from="NMenuJenis/BPenyimpanan" to="." method="_on_BPenyimpanan_pressed"]

[connection signal="pressed" from="NMenuJenis/BKembali" to="." method="_on_BKembali_pressed"]

[connection signal="pressed" from="NAbout/BKembali" to="." method="_on_BKembali_pressed"]

[connection signal="pressed" from="NSkor/BKembali" to="." method="_on_BKembali_pressed"]


[editable path="NMenuLogin"]
[editable path="NMenuAwal"]
[editable path="NMenuJenis"]
[editable path="NAbout"]
[editable path="NSkor"]
